--- a/lang/cs.yml
+++ b/lang/cs.yml
@@ -147,7 +147,7 @@ cs:
     MAXIMUM: 'Hesla musí být nanejvýš {max} znaků dlouhé.'
     SHOWONCLICKTITLE: 'Změnit heslo'
   ContentController:
-    DRAFT_SITE_ACCESS_RESTRICTION: 'Musíte se přihlásit se svým CMS heslem, aby jste mohli prohlížet koncept nebo archivovaný obsah. <a href="%s">Klikněte sem pro návrat na zveřejněný web.</a>'
+    DRAFT_SITE_ACCESS_RESTRICTION: 'Musíte se přihlásit se svým CMS heslem, aby jste mohli prohlížet koncept nebo archivovaný obsah. <a href="{link}">Klikněte sem pro návrat na zveřejněný web.</a>'
     NOTLOGGEDIN: Nepřihlášen
   CreditCardField:
     FIRST: první
@@ -247,7 +247,7 @@ cs:
     VALIDATOR: Validátor
     VALIDCURRENCY: 'Prosím zadejte platnou měnu'
   FormField:
-    Example: 'např. %s'
+    Example: 'např. {format}'
     NONE: žádný
   GridAction:
     DELETE_DESCRIPTION: Smazat
@@ -260,7 +260,7 @@ cs:
     Find: Hledat
     LEVELUP: 'O úroveň výše'
     LinkExisting: 'Odkaz existující'
-    NewRecord: 'Nový %s'
+    NewRecord: 'Nový {type}'
     NoItemsFound: 'Žádné položky'
     PRINTEDAT: 'Vytištěno v'
     PRINTEDBY: Vytištěno
@@ -276,7 +276,7 @@ cs:
     Create: Vytvořit
     Delete: Smazat
     DeletePermissionsFailure: 'Žádná oprávnění mazat'
-    Deleted: 'Smazáno %s %s'
+    Deleted: 'Smazáno {type} {name}'
     Save: Uložit
     Saved: 'Uloženo {name} {link}'
   GridFieldEditButton_ss:
@@ -290,7 +290,7 @@ cs:
     DefaultGroupTitleContentAuthors: 'Autoři obsahu'
     Description: Popis
     GroupReminder: 'Když vyberete nadřizenou skupinu, tato skupina bude mít všechny její role'
-    HierarchyPermsError: 'Nelze připojit nadřazenou skupinu "%s" s privilegovanými právy (vyžaduje ADMIN přístup)'
+    HierarchyPermsError: 'Nelze připojit nadřazenou skupinu "{group}" s privilegovanými právy (vyžaduje ADMIN přístup)'
     Locked: 'Zamčený?'
     NoRoles: 'Žádné role'
     PLURALNAME: Skupiny
@@ -302,10 +302,10 @@ cs:
     many_many_Members: Členové
   GroupImportForm:
     Help1: '<p>Import jedné nebo více skupin v <em>CSV</em> formátu (čárkou-oddělené hodnoty). <small><a href="#" class="toggle-advanced">Zobrazit rozšířené použití</a></small></p>'
-    Help2: '<div class="advanced"> <h4>Pokročilé použití</h4> <ul> <li>Povolené sloupce: <em>%s</em></li> <li>Existující skupiny jsou porovnány jejich unikátním <em>Code</em> hodnotou, a aktualizovány s novými hodnotami z importovaného souboru</li> <li>Hierarchie skupin může být tvořena použitím <em>ParentCode</em> sloupce.<li> <li>Kódy oprávnění mohou být přiřazeny <em>PermissionCode</em> sloupcem. Existující oprávnění nejsou smazána.</li> </ul> </div>'
+    Help2: '<div class="advanced"> <h4>Pokročilé použití</h4> <ul> <li>Povolené sloupce: <em>{allowed}</em></li> <li>Existující skupiny jsou porovnány jejich unikátním <em>Code</em> hodnotou, a aktualizovány s novými hodnotami z importovaného souboru</li> <li>Hierarchie skupin může být tvořena použitím <em>ParentCode</em> sloupce.<li> <li>Kódy oprávnění mohou být přiřazeny <em>PermissionCode</em> sloupcem. Existující oprávnění nejsou smazána.</li> </ul> </div>'
     ResultCreated: 'Vytvořeno {count} skupin'
-    ResultDeleted: 'Smazáno %d skupin'
-    ResultUpdated: 'Aktualizováno %d skupin'
+    ResultDeleted: 'Smazáno {count} skupin'
+    ResultUpdated: 'Aktualizováno {count} skupin'
   HTMLEditorField:
     ANCHORSCANNOTACCESSPAGE: 'Nemáte povolen přístup k obsahu cílové stránky.'
     ANCHORSPAGENOTFOUND: 'Cílová stránka nenelazena.'
@@ -506,9 +506,9 @@ cs:
     Toggle: 'Ukázat nápovědu formátování'
   MemberImportForm:
     Help1: '<p>Import členů v <em>CSV formátu</em> (čárkou-oddělené hodnoty). <small><a href="#" class="toggle-advanced">Zobrazit rozšířené použití</a></small></p>'
-    Help2: '<div class="advanced"> <h4>Pokročilé použití</h4> <ul> <li>Povolené sloupce: <em>%s</em></li> <li>Existující uživatelé jsou porovnáni jejich unikátní vlastností <em>Code</em>, a aktualizováni s novými hodnotami z importovaného souboru.</li> <li>Skupiny mohou být přiřazeny sloupcem <em>Groups</em>. Skupiny jsou identifikovány svojí vlastností <em>Code</em>, více skupin může být odděleno čárkou. Existující členství ve skupině nejsou smazána.</li> </ul> </div>'
+    Help2: '<div class="advanced"> <h4>Pokročilé použití</h4> <ul> <li>Povolené sloupce: <em>{allowed}</em></li> <li>Existující uživatelé jsou porovnáni jejich unikátní vlastností <em>Code</em>, a aktualizováni s novými hodnotami z importovaného souboru.</li> <li>Skupiny mohou být přiřazeny sloupcem <em>Groups</em>. Skupiny jsou identifikovány svojí vlastností <em>Code</em>, více skupin může být odděleno čárkou. Existující členství ve skupině nejsou smazána.</li> </ul> </div>'
     ResultCreated: 'Vytvořeno {count} členů'
-    ResultDeleted: 'Smazáno %d členů'
+    ResultDeleted: 'Smazáno {count} členů'
     ResultNone: 'Žádné změny'
     ResultUpdated: 'Aktualizováno {count} členů'
   MemberPassword:
@@ -529,9 +529,9 @@ cs:
     UPDATEDRECORDS: 'Aktualizováno {count} záznamů.'
   ModelAdmin_ImportSpec_ss:
     IMPORTSPECFIELDS: 'Sloupce databáze'
-    IMPORTSPECLINK: 'Ukázat specifikaci pro %s'
+    IMPORTSPECLINK: 'Ukázat specifikaci pro {model}'
     IMPORTSPECRELATIONS: Relace
-    IMPORTSPECTITLE: 'Specifikace pro %s'
+    IMPORTSPECTITLE: 'Specifikace pro {model}'
   ModelAdmin_Tools_ss:
     FILTER: Filtrovat
     IMPORT: Importovat
@@ -551,9 +551,9 @@ cs:
     Page: Stránka
     View: Zobrazit
   PasswordValidator:
-    LOWCHARSTRENGTH: 'Prosím, posilněte heslo přidáním některých z následujících znaků: %s'
+    LOWCHARSTRENGTH: 'Prosím, posilněte heslo přidáním některých z následujících znaků: {chars}'
     PREVPASSWORD: 'Již jste použil toto heslo v minulosti, vyberte nové heslo, prosím'
-    TOOSHORT: 'Heslo je příliš krátké, musí být %s nebo více znaků dlouhé'
+    TOOSHORT: 'Heslo je příliš krátké, musí být {minimum} nebo více znaků dlouhé'
   Permission:
     AdminGroup: Administrátor
     CMS_ACCESS_CATEGORY: 'Přístup CMS'
@@ -565,7 +565,7 @@ cs:
     AssignedTo: 'přiděleno k "{title}"'
     FromGroup: 'zdědeno ze skupiny "{title}"'
     FromRole: 'zdědeno z role "{title}"'
-    FromRoleOnGroup: 'děděno z role "%s" ve skupině "%s"'
+    FromRoleOnGroup: 'děděno z role "{roletitle}" ve skupině "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Pouze administrátor může použít'
     PLURALNAME: Role
@@ -573,7 +573,7 @@ cs:
     Title: Název
   PermissionRoleCode:
     PLURALNAME: 'Kódy role oprávnění'
-    PermsError: 'Nelze připojit kód "%s" s privilegovanými právy (vyžaduje ADMIN přístup)'
+    PermsError: 'Nelze připojit kód "{code}" s privilegovanými právy (vyžaduje ADMIN přístup)'
     SINGULARNAME: 'Kód role oprávnění'
   Permissions:
     PERMISSIONS_CATEGORY: 'Role a přístupová práva'
@@ -728,12 +728,12 @@ cs:
     has_many_Versions: Verze
   VersionedGridFieldItemRequest:
     ARCHIVE: Archív
-    Archived: 'Archivováno %s %s'
+    Archived: 'Archivováno {type} {title}'
     BUTTONARCHIVEDESC: 'Nezveřejnit a odeslat do archívu'
     BUTTONPUBLISH: Zveřejnit
     BUTTONUNPUBLISH: Nezveřejnit
     BUTTONUNPUBLISHDESC: 'Odstranit tento záznam z publikovaných na webu'
     Published: 'Zveřejněno {name} {link}'
-    Unpublished: 'Nezveřejněno %s %s'
+    Unpublished: 'Nezveřejněno {type} {title}'
   i18n:
     PLURAL: '{number} {form}'
