--- a/lang/ru.yml
+++ b/lang/ru.yml
@@ -147,7 +147,7 @@ ru:
     MAXIMUM: 'Пароль должен быть не длиннее {max} символов.'
     SHOWONCLICKTITLE: 'Изменить пароль'
   ContentController:
-    DRAFT_SITE_ACCESS_RESTRICTION: 'Для просмотра чернового или архивного содержимого вам необходимо войти в систему со своим именем пользователя и паролем. <a href="%s">Щелкните здесь, чтобы вернуться на опубликованный сайт.</a>'
+    DRAFT_SITE_ACCESS_RESTRICTION: 'Для просмотра чернового или архивного содержимого вам необходимо войти в систему со своим именем пользователя и паролем. <a href="{link}">Щелкните здесь, чтобы вернуться на опубликованный сайт.</a>'
     NOTLOGGEDIN: 'Не выполнен вход в систему'
   CreditCardField:
     FIRST: первая
@@ -247,7 +247,7 @@ ru:
     VALIDATOR: Валидатор
     VALIDCURRENCY: 'Пожалуйста, укажите валюту правильно'
   FormField:
-    Example: 'например, %s'
+    Example: 'например, {format}'
     NONE: 'не выбрано'
   GridAction:
     DELETE_DESCRIPTION: Удалить
@@ -260,7 +260,7 @@ ru:
     Find: Найти
     LEVELUP: 'Уровень выше'
     LinkExisting: Связать
-    NewRecord: 'Новый(-ая) %s'
+    NewRecord: 'Новый(-ая) {type}'
     NoItemsFound: 'Элементов не найдено'
     PRINTEDAT: 'Когда распечатано:'
     PRINTEDBY: 'Кем распечатано:'
@@ -276,7 +276,7 @@ ru:
     Create: Создать
     Delete: Удалить
     DeletePermissionsFailure: 'Нет прав на удаление'
-    Deleted: 'Удалено %s %s'
+    Deleted: 'Удалено {type} {name}'
     Save: 'Сохранить'
     Saved: 'Сохранено: {name} {link}'
   GridFieldEditButton_ss:
@@ -290,7 +290,7 @@ ru:
     DefaultGroupTitleContentAuthors: 'Авторы содержимого'
     Description: Описание
     GroupReminder: 'При назначении группы верхнего уровня все роли будут переняты из нее'
-    HierarchyPermsError: 'У Вас недостаточно прав для назначения родительской группы "%s" (необходимы права администратора)'
+    HierarchyPermsError: 'У Вас недостаточно прав для назначения родительской группы "{group}" (необходимы права администратора)'
     Locked: 'Блокировано?'
     NoRoles: 'Ролей не найдено'
     PLURALNAME: Группы
@@ -302,10 +302,10 @@ ru:
     many_many_Members: 'Члены группы'
   GroupImportForm:
     Help1: '<p>Импорт одной или нескольких групп в формате <em>CSV</em> (comma-separated values). <small><a href="#" class="toggle-advanced">Подробные сведения</a></small></p>'
-    Help2: "<div class=\"advanced\">\n<h4>Расширенное использование</h4>\n<ul>\n<li>Разрешенные столбцы: <em>%s</em></li>\n<li>Существующие пользователи сверяются c уникальным атрибутом <em>Code</em>, после чего в записи вносятся новые значения из \nимпортированного файла.</li>\n<li>Назначение групп производится с помощью столбца <em>Groups</em>. Группы идентифицируются по атрибуту <em>Code</em>, \nотдельные группы разделяются запятой. Если участник входит в какую-либо группу, это свойство не обнуляется.</li>\n</ul>\n</div>"
+    Help2: "<div class=\"advanced\">\n<h4>Расширенное использование</h4>\n<ul>\n<li>Разрешенные столбцы: <em>{allowed}</em></li>\n<li>Существующие пользователи сверяются c уникальным атрибутом <em>Code</em>, после чего в записи вносятся новые значения из \nимпортированного файла.</li>\n<li>Назначение групп производится с помощью столбца <em>Groups</em>. Группы идентифицируются по атрибуту <em>Code</em>, \nотдельные группы разделяются запятой. Если участник входит в какую-либо группу, это свойство не обнуляется.</li>\n</ul>\n</div>"
     ResultCreated: 'Создано {count} групп'
-    ResultDeleted: 'Удалено %d групп'
-    ResultUpdated: 'Обновлено %d групп'
+    ResultDeleted: 'Удалено {count} групп'
+    ResultUpdated: 'Обновлено {count} групп'
   HTMLEditorField:
     ANCHORSCANNOTACCESSPAGE: 'У Вас недостаточно прав для доступа к содержимому данной страницы.'
     ANCHORSPAGENOTFOUND: 'Страница не найдена.'
@@ -506,9 +506,9 @@ ru:
     Toggle: 'Отобразить справку по форматированию'
   MemberImportForm:
     Help1: '<p>Импорт пользователей в формате <em>CSV</em> (comma-separated values). <small><a href="#" class="toggle-advanced">Подробные сведения</a></small></p>'
-    Help2: "<div class=\"advanced\">\n<h4>Расширенное использование</h4>\n<ul>\n<li>Разрешенные столбцы: <em>%s</em></li>\n<li>Существующие пользователи сверяются c уникальным атрибутом <em>Code</em>, после чего в записи вносятся новые значения из \nимпортированного файла.</li>\n<li>Назначение групп производится с помощью столбца <em>Groups</em>. Группы идентифицируются по атрибуту <em>Code</em>, \nотдельные группы разделяются запятой. Если участник входит в какую-либо группу, это свойство не обнуляется.</li>\n</ul>\n</div>"
+    Help2: "<div class=\"advanced\">\n<h4>Расширенное использование</h4>\n<ul>\n<li>Разрешенные столбцы: <em>{allowed}</em></li>\n<li>Существующие пользователи сверяются c уникальным атрибутом <em>Code</em>, после чего в записи вносятся новые значения из \nимпортированного файла.</li>\n<li>Назначение групп производится с помощью столбца <em>Groups</em>. Группы идентифицируются по атрибуту <em>Code</em>, \nотдельные группы разделяются запятой. Если участник входит в какую-либо группу, это свойство не обнуляется.</li>\n</ul>\n</div>"
     ResultCreated: 'Создано {count} участников'
-    ResultDeleted: 'Удалено %d участников'
+    ResultDeleted: 'Удалено {count} участников'
     ResultNone: 'Изменений нет'
     ResultUpdated: 'Обновлено {count} участников'
   MemberPassword:
@@ -529,9 +529,9 @@ ru:
     UPDATEDRECORDS: 'Обновлено {count} записей.'
   ModelAdmin_ImportSpec_ss:
     IMPORTSPECFIELDS: 'Колонки таблицы базы данных'
-    IMPORTSPECLINK: 'Показать спецификацию для %s'
+    IMPORTSPECLINK: 'Показать спецификацию для {model}'
     IMPORTSPECRELATIONS: Отношения
-    IMPORTSPECTITLE: 'Спецификация для %s'
+    IMPORTSPECTITLE: 'Спецификация для {model}'
   ModelAdmin_Tools_ss:
     FILTER: Фильтр
     IMPORT: Импорт
@@ -551,9 +551,9 @@ ru:
     Page: Страница
     View: Просмотр
   PasswordValidator:
-    LOWCHARSTRENGTH: 'Пожалуйста, увеличьте сложность пароля, добавив один из следующих символов: %s'
+    LOWCHARSTRENGTH: 'Пожалуйста, увеличьте сложность пароля, добавив один из следующих символов: {chars}'
     PREVPASSWORD: 'Вы уже использовали этот пароль прежде. Пожалуйста, выберите новый пароль.'
-    TOOSHORT: 'Слишком короткий пароль, минимальная длина - %s символов'
+    TOOSHORT: 'Слишком короткий пароль, минимальная длина - {minimum} символов'
   Permission:
     AdminGroup: Администратор
     CMS_ACCESS_CATEGORY: 'Доступ к CMS'
@@ -565,7 +565,7 @@ ru:
     AssignedTo: 'присвоено "{title}"'
     FromGroup: 'перенято от группы "{title}"'
     FromRole: 'перенято из роли "{title}"'
-    FromRoleOnGroup: 'перенято из роли "%s" для группы "%s"'
+    FromRoleOnGroup: 'перенято из роли "{roletitle}" для группы "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Может применяться только администратором'
     PLURALNAME: 'Роли'
@@ -573,7 +573,7 @@ ru:
     Title: Название
   PermissionRoleCode:
     PLURALNAME: 'Код роли доступа'
-    PermsError: 'У Вас недостаточно прав для назначения родительской группы "%s" (необходимы права администратора)'
+    PermsError: 'У Вас недостаточно прав для назначения родительской группы "{code}" (необходимы права администратора)'
     SINGULARNAME: 'Код роли доступа'
   Permissions:
     PERMISSIONS_CATEGORY: 'Роли и права доступа'
@@ -728,12 +728,12 @@ ru:
     has_many_Versions: Версии
   VersionedGridFieldItemRequest:
     ARCHIVE: 'Архив'
-    Archived: 'Зархивировано %s %s'
+    Archived: 'Зархивировано {type} {title}'
     BUTTONARCHIVEDESC: 'Отменить публикацию и отправить в архив'
     BUTTONPUBLISH: Опубликовать
     BUTTONUNPUBLISH: 'Отмена публикации'
     BUTTONUNPUBLISHDESC: 'Удалить эту страницу с опубликованного сайта'
     Published: 'Опубликована {name} {link}'
-    Unpublished: 'Публикация отменена  %s %s'
+    Unpublished: 'Публикация отменена  {type} {title}'
   i18n:
     PLURAL: '{number} {form}'
