--- a/lang/sk.yml
+++ b/lang/sk.yml
@@ -147,7 +147,7 @@ sk:
     MAXIMUM: 'Heslá musia byť najviac {max} znakov dlhé.'
     SHOWONCLICKTITLE: 'Zmeniť heslo'
   ContentController:
-    DRAFT_SITE_ACCESS_RESTRICTION: 'Musíte sa prihlásiť so svojím CMS heslom pre zobrazenie návrhu alebo archivovaného obsahu. <a href="%s">Kliknite tu pre návrat na publikovaný web .</a>'
+    DRAFT_SITE_ACCESS_RESTRICTION: 'Musíte sa prihlásiť so svojím CMS heslom pre zobrazenie návrhu alebo archivovaného obsahu. <a href="{link}">Kliknite tu pre návrat na publikovaný web .</a>'
     NOTLOGGEDIN: Neprihlásený
   CreditCardField:
     FIRST: prvý
@@ -247,7 +247,7 @@ sk:
     VALIDATOR: Validácia
     VALIDCURRENCY: 'Prosím zadajte platnú menu'
   FormField:
-    Example: 'napr. %s'
+    Example: 'napr. {format}'
     NONE: žiadne
   GridAction:
     DELETE_DESCRIPTION: Zmazať
@@ -260,7 +260,7 @@ sk:
     Find: Vyhľadať
     LEVELUP: 'Úroveň vyššie'
     LinkExisting: 'Prepojenie existujúcich'
-    NewRecord: 'Nový %s'
+    NewRecord: 'Nový {type}'
     NoItemsFound: 'Žiadne položky'
     PRINTEDAT: 'Vytlačené v'
     PRINTEDBY: Vytlačené
@@ -276,7 +276,7 @@ sk:
     Create: Vytvoriť
     Delete: Zmazať
     DeletePermissionsFailure: 'Žiadne oprávnenia zmazať'
-    Deleted: 'Zmazané %s %s'
+    Deleted: 'Zmazané {type} {name}'
     Save: Uložiť
     Saved: 'Uložené {name} {link}'
   GridFieldEditButton_ss:
@@ -290,7 +290,7 @@ sk:
     DefaultGroupTitleContentAuthors: 'Autori obsahu'
     Description: Popis
     GroupReminder: 'Ak vyberiete nadriadenú skupinu, bude táto skupina mať všetky úlohy'
-    HierarchyPermsError: 'Nie je možné pripojiť nadriadenú skupinu "%s" s privilegovanými právami (vyžaduje ADMIN prístup)'
+    HierarchyPermsError: 'Nie je možné pripojiť nadriadenú skupinu "{group}" s privilegovanými právami (vyžaduje ADMIN prístup)'
     Locked: 'Zamknuté?'
     NoRoles: 'Nenašli sa úlohy'
     PLURALNAME: Skupiny
@@ -302,10 +302,10 @@ sk:
     many_many_Members: Členovia
   GroupImportForm:
     Help1: '<p>Importovať jednu alebo viac skupín v <em>CSV</em> formáte (čiarkou oddelené hodnoty). <small><a href="#" class="toggle-advanced">Zobraziť pokročilé použitie</a></small></p>'
-    Help2: '<div class=''advanced''>\n<h4>Pokročilé použitie</h4>\n<ul>\n<li>Povolené stĺpce: <em>%s</em></li>\n<li>Existujúce skupiny sú porovnávané ich unikátnou vlastnosťou <em>Code</em>, a aktualizované s novými hodnotami z\nimportovaného súboru.</li>\n<li>Hierarchia skupín môže byť tvorená použitím stĺpca <em>ParentCode</em>.</li>\n<li>Kódy oprávnení môžu byť priradené stĺpcom <em>PermissionCode</em>. Existujúce oprávnenia nie sú zmazané.</li>\n</ul>\n</div>'
+    Help2: '<div class=''advanced''>\n<h4>Pokročilé použitie</h4>\n<ul>\n<li>Povolené stĺpce: <em>{allowed}</em></li>\n<li>Existujúce skupiny sú porovnávané ich unikátnou vlastnosťou <em>Code</em>, a aktualizované s novými hodnotami z\nimportovaného súboru.</li>\n<li>Hierarchia skupín môže byť tvorená použitím stĺpca <em>ParentCode</em>.</li>\n<li>Kódy oprávnení môžu byť priradené stĺpcom <em>PermissionCode</em>. Existujúce oprávnenia nie sú zmazané.</li>\n</ul>\n</div>'
     ResultCreated: 'Vytvorených {count} skupín'
-    ResultDeleted: 'Zmazané %d skupiny'
-    ResultUpdated: 'Aktualizované %d skupiny'
+    ResultDeleted: 'Zmazané {count} skupiny'
+    ResultUpdated: 'Aktualizované {count} skupiny'
   HTMLEditorField:
     ANCHORSCANNOTACCESSPAGE: 'Nemáte povolený prístup k obsahu cieľovej stránky.'
     ANCHORSPAGENOTFOUND: 'Cieľová stránka nebola nájdená.'
@@ -506,9 +506,9 @@ sk:
     Toggle: 'Ukázať nápovedu formátovania'
   MemberImportForm:
     Help1: '<p>Importovať členov v <em>CSV formáte</em> (čiarkou oddelené hodnoty). <small><a href="#" class="toggle-advanced">Zobraziť pokročile použitie</a></small></p>'
-    Help2: '<div class="advanced">\n<h4>Pokročilé použitie</h4>\n<ul>\n<li>Povolené stĺpce: <em>%s</em></li>\n<li>Existujúci užívatelia sú porovnávaní ich unikátnou vlastnosťou <em>Code</em>, a aktualizovaní s novými hodnotami z\nimportovaného súboru.</li>\n<li>Skupiny môžu byť priradené stĺpcom <em>Groups</em>. Skupiny sú identifikované ich vlastnosťou <em>Code</em>,\nviacero skupín môže byť oddelené čiarkou. Existujúce členstvá skupiny nie sú zmazané.</li>\n</ul>\n</div>'
+    Help2: '<div class="advanced">\n<h4>Pokročilé použitie</h4>\n<ul>\n<li>Povolené stĺpce: <em>{allowed}</em></li>\n<li>Existujúci užívatelia sú porovnávaní ich unikátnou vlastnosťou <em>Code</em>, a aktualizovaní s novými hodnotami z\nimportovaného súboru.</li>\n<li>Skupiny môžu byť priradené stĺpcom <em>Groups</em>. Skupiny sú identifikované ich vlastnosťou <em>Code</em>,\nviacero skupín môže byť oddelené čiarkou. Existujúce členstvá skupiny nie sú zmazané.</li>\n</ul>\n</div>'
     ResultCreated: 'Vytvorených {count} členov'
-    ResultDeleted: 'Zmazaných %d členov'
+    ResultDeleted: 'Zmazaných {count} členov'
     ResultNone: 'Žiadne zmeny'
     ResultUpdated: 'Aktualizovaných {count} členov'
   MemberPassword:
@@ -529,9 +529,9 @@ sk:
     UPDATEDRECORDS: 'Aktualizovaných {count} záznamov.'
   ModelAdmin_ImportSpec_ss:
     IMPORTSPECFIELDS: 'Stĺpce databázy'
-    IMPORTSPECLINK: 'Zobraziť špecifikáciu pre %s'
+    IMPORTSPECLINK: 'Zobraziť špecifikáciu pre {model}'
     IMPORTSPECRELATIONS: Relácie
-    IMPORTSPECTITLE: 'Špecifikácia pre %s'
+    IMPORTSPECTITLE: 'Špecifikácia pre {model}'
   ModelAdmin_Tools_ss:
     FILTER: Filtrovať
     IMPORT: Importovať
@@ -551,9 +551,9 @@ sk:
     Page: Stránka
     View: Zobraziť
   PasswordValidator:
-    LOWCHARSTRENGTH: 'Prosím posilnite heslo pridaním z týchto niektorých znakov: %s'
+    LOWCHARSTRENGTH: 'Prosím posilnite heslo pridaním z týchto niektorých znakov: {chars}'
     PREVPASSWORD: 'Už ste použili toto heslo v minulosti, vyberte nové hoslo, prosím'
-    TOOSHORT: 'Heslo je príliš krátke, musí byť %s alebo viacej znakov dlhé'
+    TOOSHORT: 'Heslo je príliš krátke, musí byť {minimum} alebo viacej znakov dlhé'
   Permission:
     AdminGroup: Administrátor
     CMS_ACCESS_CATEGORY: 'Prístup do CMS'
@@ -565,7 +565,7 @@ sk:
     AssignedTo: 'pripojené k "{title}"'
     FromGroup: 'zdedené zo skupiny "{title}"'
     FromRole: 'zdedené z úlohy "{title}"'
-    FromRoleOnGroup: 'zdedené z úlohy "%s" v skupine "%s"'
+    FromRoleOnGroup: 'zdedené z úlohy "{roletitle}" v skupine "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Iba administrátor môže použiť'
     PLURALNAME: Úlohy
@@ -573,7 +573,7 @@ sk:
     Title: Názov
   PermissionRoleCode:
     PLURALNAME: 'Kódy právomocí úloh'
-    PermsError: 'Nie je možné pripojiť kód "%s" s privilegovanými právami (vyžaduje ADMIN prístup)'
+    PermsError: 'Nie je možné pripojiť kód "{code}" s privilegovanými právami (vyžaduje ADMIN prístup)'
     SINGULARNAME: 'Kód právomocí úloh'
   Permissions:
     PERMISSIONS_CATEGORY: 'Úlohy a prístupové práva'
@@ -728,12 +728,12 @@ sk:
     has_many_Versions: verzie
   VersionedGridFieldItemRequest:
     ARCHIVE: Archív
-    Archived: 'Archivované %s %s'
+    Archived: 'Archivované {type} {title}'
     BUTTONARCHIVEDESC: 'Nezverejniť a odoslať do archívu'
     BUTTONPUBLISH: Zverejniť
     BUTTONUNPUBLISH: Nezverejniť
     BUTTONUNPUBLISHDESC: 'Odstrániť tento záznam z publikovaného webu'
     Published: 'Zverejnené {name} {link}'
-    Unpublished: 'Nezverejné %s %s'
+    Unpublished: 'Nezverejné {type} {title}'
   i18n:
     PLURAL: '{number} {form}'
