--- a/lang/sl_SI.yml
+++ b/lang/sl_SI.yml
@@ -170,14 +170,14 @@ sl_SI:
     FilterBy: 'Filtriraj po'
     Find: Najdi
     LEVELUP: 'Nivo višje'
-    NewRecord: 'Nov %s'
+    NewRecord: 'Nov {type}'
     ResetFilter: Resetiraj
   GridFieldDetailForm:
     CancelBtn: Prekliči
     Create: Ustvari
     Delete: Izbriši
     DeletePermissionsFailure: 'Nimate pravic za brisanje'
-    Deleted: 'Izbrisano %s %s'
+    Deleted: 'Izbrisano {type} {name}'
     Save: Shrani
     Saved: 'Shranjeno {name} {link}'
   GridFieldEditButton_ss:
@@ -198,8 +198,8 @@ sl_SI:
     has_many_Permissions: Dovoljenja
     many_many_Members: Člani
   GroupImportForm:
-    ResultDeleted: 'Izbrisane %d skupine'
-    ResultUpdated: 'Posodobljene %d skupine'
+    ResultDeleted: 'Izbrisane {count} skupine'
+    ResultUpdated: 'Posodobljene {count} skupine'
   HTMLEditorField:
     ANCHORSCANNOTACCESSPAGE: 'Nimate dovoljenj za dostop do vsebin na izbrani strani.'
     ANCHORSPAGENOTFOUND: 'Ciljne strani ni mogoče najti.'
@@ -332,7 +332,7 @@ sl_SI:
     has_many_Versions: Verzije
   VersionedGridFieldItemRequest:
     ARCHIVE: Arhiv
-    Archived: 'Arhivirano %s %s'
+    Archived: 'Arhivirano {type} {title}'
     BUTTONARCHIVEDESC: 'Odstrani iz objave in pošlji v arhiv'
     BUTTONPUBLISH: Objavi
     BUTTONUNPUBLISH: 'Odstrani iz objave'
