--- a/lang/af.yml
+++ b/lang/af.yml
@@ -141,7 +141,7 @@ af:
     Find: Vind
     LEVELUP: 'Op een vlak'
     LinkExisting: 'Koppel bestaande'
-    NewRecord: 'Nuwe %s'
+    NewRecord: 'Nuwe {type}'
     NoItemsFound: 'Geen items gevind nie'
     PRINTEDAT: 'Gedruk te'
     PRINTEDBY: 'Gedruk deur'
@@ -156,7 +156,7 @@ af:
     Create: Skep
     Delete: Verwyder
     DeletePermissionsFailure: 'Geen toestemming om te verwyder nie'
-    Deleted: 'Verwyderde %s %s'
+    Deleted: 'Verwyderde {type} {name}'
     Save: Stoor
   Group:
     Code: 'Groep Kode'
@@ -174,8 +174,8 @@ af:
     many_many_Members: Lidde
   GroupImportForm:
     Help1: '<p> Voer een of meer groepe in <em>CSV</em>formaat (komma geskeide waardes).<small> <a href="#" class="toggle-advanced">Wys gevorderde gebruike</a></small></p>'
-    ResultDeleted: 'Verwyderde %d groepe'
-    ResultUpdated: '%d Groepe was opgedateer'
+    ResultDeleted: 'Verwyderde {count} groepe'
+    ResultUpdated: '{count} Groepe was opgedateer'
   HtmlEditorField:
     ADDURL: 'Voeg URL by'
     ANCHORVALUE: Anker
@@ -296,7 +296,7 @@ af:
     TWODIGITYEAR: 'Twee syfer jaar'
   MemberImportForm:
     Help1: '<p> Voer gebruikers in <em>CSV</em>formaat (komma geskeide waardes).<small> <a href="#" class="toggle-advanced">Wys gevorderde gebruike</a></small></p>'
-    ResultDeleted: 'Het %d lede verwyder'
+    ResultDeleted: 'Het {count} lede verwyder'
     ResultNone: 'Geen veranderinge'
   MemberPassword:
     PLURALNAME: 'Lid Wagwoorde'
@@ -338,7 +338,7 @@ af:
     AssignedTo: 'toegeken aan "{title}"'
     FromGroup: 'geërf van groep "{title}"'
     FromRole: 'geërf van rol"{title}"'
-    FromRoleOnGroup: 'oorgeërf van rol "%s" op groep "%s"'
+    FromRoleOnGroup: 'oorgeërf van rol "{roletitle}" op groep "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Slegs administrateur daarvoor aansoek doen'
     PLURALNAME: Rolle
