--- a/lang/en.yml
+++ b/lang/en.yml
@@ -152,7 +152,7 @@ en:
     MAXIMUM: 'Passwords must be at most {max} characters long.'
     SHOWONCLICKTITLE: 'Change Password'
   ContentController:
-    DRAFT_SITE_ACCESS_RESTRICTION: 'You must log in with your CMS password in order to view the draft or archived content. <a href="%s">Click here to go back to the published site.</a>'
+    DRAFT_SITE_ACCESS_RESTRICTION: 'You must log in with your CMS password in order to view the draft or archived content. <a href="{link}">Click here to go back to the published site.</a>'
     NOTLOGGEDIN: 'Not logged in'
   CreditCardField:
     FIRST: first
@@ -258,7 +258,7 @@ en:
     VALIDATOR: Validator
     VALIDCURRENCY: 'Please enter a valid currency'
   FormField:
-    Example: 'e.g. %s'
+    Example: 'e.g. {format}'
     NONE: none
   GridAction:
     DELETE_DESCRIPTION: Delete
@@ -271,7 +271,7 @@ en:
     Find: Find
     LEVELUP: 'Level up'
     LinkExisting: 'Link Existing'
-    NewRecord: 'New %s'
+    NewRecord: 'New {type}'
     NoItemsFound: 'No items found'
     PRINTEDAT: 'Printed at'
     PRINTEDBY: 'Printed by'
@@ -287,7 +287,7 @@ en:
     Create: Create
     Delete: Delete
     DeletePermissionsFailure: 'No delete permissions'
-    Deleted: 'Deleted %s %s'
+    Deleted: 'Deleted {type} {name}'
     Save: Save
     Saved: 'Saved {name} {link}'
   GridFieldEditButton_ss:
@@ -301,7 +301,7 @@ en:
     DefaultGroupTitleContentAuthors: 'Content Authors'
     Description: Description
     GroupReminder: 'If you choose a parent group, this group will take all it''s roles'
-    HierarchyPermsError: 'Can''t assign parent group "%s" with privileged permissions (requires ADMIN access)'
+    HierarchyPermsError: 'Can''t assign parent group "{group}" with privileged permissions (requires ADMIN access)'
     Locked: 'Locked?'
     NoRoles: 'No roles found'
     PLURALNAME: Groups
@@ -313,10 +313,10 @@ en:
     many_many_Members: Members
   GroupImportForm:
     Help1: '<p>Import one or more groups in <em>CSV</em> format (comma-separated values). <small><a href="#" class="toggle-advanced">Show advanced usage</a></small></p>'
-    Help2: '<div class="advanced"><h4>Advanced usage</h4><ul><li>Allowed columns: <em>%s</em></li><li>Existing groups are matched by their unique <em>Code</em> value, and updated with any new values from the imported file</li><li>Group hierarchies can be created by using a <em>ParentCode</em> column.</li><li>Permission codes can be assigned by the <em>PermissionCode</em> column. Existing permission codes are not cleared.</li></ul></div>'
+    Help2: '<div class="advanced"><h4>Advanced usage</h4><ul><li>Allowed columns: <em>{allowed}</em></li><li>Existing groups are matched by their unique <em>Code</em> value, and updated with any new values from the imported file</li><li>Group hierarchies can be created by using a <em>ParentCode</em> column.</li><li>Permission codes can be assigned by the <em>PermissionCode</em> column. Existing permission codes are not cleared.</li></ul></div>'
     ResultCreated: 'Created {count} groups'
-    ResultDeleted: 'Deleted %d groups'
-    ResultUpdated: 'Updated %d groups'
+    ResultDeleted: 'Deleted {count} groups'
+    ResultUpdated: 'Updated {count} groups'
   HTMLEditorField:
     ANCHORSCANNOTACCESSPAGE: 'You are not permitted to access the content of the target page.'
     ANCHORSPAGENOTFOUND: 'Target page not found.'
@@ -489,7 +489,7 @@ en:
     PASSWORD: Password
     PASSWORDEXPIRED: 'Your password has expired. Please choose a new one.'
     PLURALNAME: Members
-    REMEMBERME: 'Remember me next time? (for %d days on this device)'
+    REMEMBERME: 'Remember me next time? (for {days} days on this device)'
     SINGULARNAME: Member
     SUBJECTPASSWORDCHANGED: 'Your password has been changed'
     SUBJECTPASSWORDRESET: 'Your password reset link'
@@ -531,9 +531,9 @@ en:
     Toggle: 'Show formatting help'
   MemberImportForm:
     Help1: '<p>Import users in <em>CSV format</em> (comma-separated values). <small><a href="#" class="toggle-advanced">Show advanced usage</a></small></p>'
-    Help2: '<div class="advanced"><h4>Advanced usage</h4><ul><li>Allowed columns: <em>%s</em></li><li>Existing users are matched by their unique <em>Code</em> property, and updated with any new values from the imported file.</li><li>Groups can be assigned by the <em>Groups</em> column. Groups are identified by their <em>Code</em> property, multiple groups can be separated by comma. Existing group memberships are not cleared.</li></ul></div>'
+    Help2: '<div class="advanced"><h4>Advanced usage</h4><ul><li>Allowed columns: <em>{allowed}</em></li><li>Existing users are matched by their unique <em>Code</em> property, and updated with any new values from the imported file.</li><li>Groups can be assigned by the <em>Groups</em> column. Groups are identified by their <em>Code</em> property, multiple groups can be separated by comma. Existing group memberships are not cleared.</li></ul></div>'
     ResultCreated: 'Created {count} members'
-    ResultDeleted: 'Deleted %d members'
+    ResultDeleted: 'Deleted {count} members'
     ResultNone: 'No changes'
     ResultUpdated: 'Updated {count} members'
   MemberPassword:
@@ -554,9 +554,9 @@ en:
     UPDATEDRECORDS: 'Updated {count} records.'
   ModelAdmin_ImportSpec_ss:
     IMPORTSPECFIELDS: 'Database columns'
-    IMPORTSPECLINK: 'Show Specification for %s'
+    IMPORTSPECLINK: 'Show Specification for {model}'
     IMPORTSPECRELATIONS: Relations
-    IMPORTSPECTITLE: 'Specification for %s'
+    IMPORTSPECTITLE: 'Specification for {model}'
   ModelAdmin_Tools_ss:
     FILTER: Filter
     IMPORT: Import
@@ -576,9 +576,9 @@ en:
     Page: Page
     View: View
   PasswordValidator:
-    LOWCHARSTRENGTH: 'Please increase password strength by adding some of the following characters: %s'
+    LOWCHARSTRENGTH: 'Please increase password strength by adding some of the following characters: {chars}'
     PREVPASSWORD: 'You''ve already used that password in the past, please choose a new password'
-    TOOSHORT: 'Password is too short, it must be %s or more characters long'
+    TOOSHORT: 'Password is too short, it must be {minimum} or more characters long'
   Permission:
     AdminGroup: Administrator
     CMS_ACCESS_CATEGORY: 'CMS Access'
@@ -590,7 +590,7 @@ en:
     AssignedTo: 'assigned to "{title}"'
     FromGroup: 'inherited from group "{title}"'
     FromRole: 'inherited from role "{title}"'
-    FromRoleOnGroup: 'inherited from role "%s" on group "%s"'
+    FromRoleOnGroup: 'inherited from role "{roletitle}" on group "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Only admin can apply'
     PLURALNAME: Roles
@@ -598,7 +598,7 @@ en:
     Title: Title
   PermissionRoleCode:
     PLURALNAME: 'Permission Role Codes'
-    PermsError: 'Can''t assign code "%s" with privileged permissions (requires ADMIN access)'
+    PermsError: 'Can''t assign code "{code}" with privileged permissions (requires ADMIN access)'
     SINGULARNAME: 'Permission Role Code'
   Permissions:
     PERMISSIONS_CATEGORY: 'Roles and access permissions'
@@ -799,12 +799,12 @@ en:
     has_many_Versions: Versions
   VersionedGridFieldItemRequest:
     ARCHIVE: Archive
-    Archived: 'Archived %s %s'
+    Archived: 'Archived {type} {title}'
     BUTTONARCHIVEDESC: 'Unpublish and send to archive'
     BUTTONPUBLISH: Publish
     BUTTONUNPUBLISH: Unpublish
     BUTTONUNPUBLISHDESC: 'Remove this record from the published site'
     Published: 'Published {name} {link}'
-    Unpublished: 'Unpublished %s %s'
+    Unpublished: 'Unpublished {type} {title}'
   i18n:
     PLURAL: '{number} {form}'
