--- a/lang/nl.yml
+++ b/lang/nl.yml
@@ -112,7 +112,7 @@ nl:
     MAXIMUM: 'Een wachtwoord mag maximaal {max} karakters hebben.'
     SHOWONCLICKTITLE: 'Verander wachtwoord'
   ContentController:
-    DRAFT_SITE_ACCESS_RESTRICTION: 'Je moet inloggen met je CMS wachtwoord om die inhoud te kunnen zien. <a href="%s">Klik hier</a> om terug te keren naar de gepubliceerde site.'
+    DRAFT_SITE_ACCESS_RESTRICTION: 'Je moet inloggen met je CMS wachtwoord om die inhoud te kunnen zien. <a href="{link}">Klik hier</a> om terug te keren naar de gepubliceerde site.'
     NOTLOGGEDIN: 'Niet ingelogd'
   CreditCardField:
     FIRST: eerste
@@ -209,7 +209,7 @@ nl:
     VALIDATOR: Validator
     VALIDCURRENCY: 'Vul een geldige munteenheid in'
   FormField:
-    Example: 'bv. %s'
+    Example: 'bv. {format}'
     NONE: geen
   GridAction:
     DELETE_DESCRIPTION: Verwijderen
@@ -222,7 +222,7 @@ nl:
     Find: Zoeken
     LEVELUP: 'Niveau omhoog'
     LinkExisting: 'Koppel een bestaand item'
-    NewRecord: 'Nieuw %s'
+    NewRecord: 'Nieuw {type}'
     NoItemsFound: 'Geen items gevonden.'
     PRINTEDAT: 'Geprint op'
     PRINTEDBY: 'Geprint door'
@@ -238,7 +238,7 @@ nl:
     Create: Aanmaken
     Delete: Verwijderen
     DeletePermissionsFailure: 'Onvoldoende rechten om te verwijderen'
-    Deleted: '%s %s verwijderd'
+    Deleted: '{type} {name} verwijderd'
     Save: Opslaan
     Saved: '{name} {link} opgeslagen'
   GridFieldEditButton_ss:
@@ -252,7 +252,7 @@ nl:
     DefaultGroupTitleContentAuthors: 'Inhoud Auteurs'
     Description: 'Omschrijving '
     GroupReminder: 'Als je de bovenliggende groep selecteert, neemt deze groep alle rollen over'
-    HierarchyPermsError: 'U moet (ADMIN) rechten hebben om de bovenliggende groep "%s" toe te kennen'
+    HierarchyPermsError: 'U moet (ADMIN) rechten hebben om de bovenliggende groep "{group}" toe te kennen'
     Locked: 'Gesloten?'
     NoRoles: 'Geen rollen gevonden'
     PLURALNAME: Groepen
@@ -264,10 +264,10 @@ nl:
     many_many_Members: Leden
   GroupImportForm:
     Help1: '<p>Importeer een of meerdere groepen in <em>CSV</em>-formaat (comma-separated values). <small><a href="#" class="toggle-advanced">Toon geavanceerd gebruik</a></small></p>'
-    Help2: '<div class="advanced"> <h4>Geavanceerd gebruik</h4> <ul> <li>Toegestane kolommen: <em>%s</em></li> <li>Bestaande groepen worden geïdentificeerd door middel van hun unieke <em>Code</em>, en aangepast met de nieuwe waarden vanuit het geïmporteerde bestand</li> <li>Groepshiërarchiën kunnen aangemaakt worden door een <em>ParentCode</em> kolom te gebruiken</li>; <li>Toegangscodes kunnen toegewezen worden met de <em>PermissionCode</em> kolom. Bestaande toegangscodes worden niet verwijderd.</li> </ul> </div>'
+    Help2: '<div class="advanced"> <h4>Geavanceerd gebruik</h4> <ul> <li>Toegestane kolommen: <em>{allowed}</em></li> <li>Bestaande groepen worden geïdentificeerd door middel van hun unieke <em>Code</em>, en aangepast met de nieuwe waarden vanuit het geïmporteerde bestand</li> <li>Groepshiërarchiën kunnen aangemaakt worden door een <em>ParentCode</em> kolom te gebruiken</li>; <li>Toegangscodes kunnen toegewezen worden met de <em>PermissionCode</em> kolom. Bestaande toegangscodes worden niet verwijderd.</li> </ul> </div>'
     ResultCreated: '{count} groepen aangemaakt'
-    ResultDeleted: '%d groepen verwijderd'
-    ResultUpdated: '%d groepen aangepast'
+    ResultDeleted: '{count} groepen verwijderd'
+    ResultUpdated: '{count} groepen aangepast'
   Hierarchy:
     InfiniteLoopNotAllowed: 'Oneindige lus gevonden in "{type}" hiërarchie. Wijzig het hogere niveau om dit op te lossen'
   HtmlEditorField:
@@ -416,9 +416,9 @@ nl:
     Toggle: 'Toon opmaak hulp'
   MemberImportForm:
     Help1: '<p>Importeer leden in <em>CSV</em>-formaat (comma-separated values). <small><a href="#" class="toggle-advanced">Toon geavanceerd gebruik</a></small></p>'
-    Help2: '<div class="advanced"><h4>Geavanceerd gebruik</h4><ul><li>Toegestane kolommen: <em>%s</em></li><li>Bestaande gebruikers worden geïdentificeerd door middel van hun unieke <em>Code</em>, en aangepast met de nieuwe waarden vanuit het geïmporteerde bestand</li><li>Groepen kunnen worden toegekend door <em>Groups</em> column. Groepen worden geïdentificeerd door middel van hun unieke <em>Code</em>, meerdere groepen kunnen worden gescheiden door een komma. Bestaande groepsleden worden niet verwijderd.</li></ul></div>'
+    Help2: '<div class="advanced"><h4>Geavanceerd gebruik</h4><ul><li>Toegestane kolommen: <em>{allowed}</em></li><li>Bestaande gebruikers worden geïdentificeerd door middel van hun unieke <em>Code</em>, en aangepast met de nieuwe waarden vanuit het geïmporteerde bestand</li><li>Groepen kunnen worden toegekend door <em>Groups</em> column. Groepen worden geïdentificeerd door middel van hun unieke <em>Code</em>, meerdere groepen kunnen worden gescheiden door een komma. Bestaande groepsleden worden niet verwijderd.</li></ul></div>'
     ResultCreated: '{count} leden aangemaakt'
-    ResultDeleted: '%d leden verwijderd'
+    ResultDeleted: '{count} leden verwijderd'
     ResultNone: 'Geen wijzingen'
     ResultUpdated: '{count} leden bijgewerkt'
   MemberPassword:
@@ -439,9 +439,9 @@ nl:
     UPDATEDRECORDS: '{count} records bijgewerkt'
   ModelAdmin_ImportSpec_ss:
     IMPORTSPECFIELDS: 'Database kolommen'
-    IMPORTSPECLINK: 'Toon specificaties van %s'
+    IMPORTSPECLINK: 'Toon specificaties van {model}'
     IMPORTSPECRELATIONS: Relaties
-    IMPORTSPECTITLE: 'Specificatie van %s'
+    IMPORTSPECTITLE: 'Specificatie van {model}'
   ModelAdmin_Tools_ss:
     FILTER: Filter
     IMPORT: Importeren
@@ -459,9 +459,9 @@ nl:
     Page: Pagina
     View: Bekijk
   PasswordValidator:
-    LOWCHARSTRENGTH: 'Maak a.u.b. uw wachtwoord sterker door enkele van de volgende karakters te gebruiken: %s'
+    LOWCHARSTRENGTH: 'Maak a.u.b. uw wachtwoord sterker door enkele van de volgende karakters te gebruiken: {chars}'
     PREVPASSWORD: 'U heeft dit wachtwoord in het verleden al gebruikt, kies a.u.b. een nieuw wachtwoord.'
-    TOOSHORT: 'Het wachtwoord is te kort, het moet minimaal %s karakters hebben'
+    TOOSHORT: 'Het wachtwoord is te kort, het moet minimaal {minimum} karakters hebben'
   Permission:
     AdminGroup: Beheerder
     CMS_ACCESS_CATEGORY: 'CMS Toegang'
@@ -473,7 +473,7 @@ nl:
     AssignedTo: 'toegewezen aan "{title}"'
     FromGroup: 'geërfd van de groep "{title}"'
     FromRole: 'geërfd van de rol "{title}"'
-    FromRoleOnGroup: 'geërfd van rol "%s" in groep "%s"'
+    FromRoleOnGroup: 'geërfd van rol "{roletitle}" in groep "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Alleen admin kan doorvoeren'
     PLURALNAME: Rollen
@@ -481,7 +481,7 @@ nl:
     Title: Titel
   PermissionRoleCode:
     PLURALNAME: 'Permissie codes'
-    PermsError: 'U moet (ADMIN) rechten hebben om de code "%s" toe te kennen'
+    PermsError: 'U moet (ADMIN) rechten hebben om de code "{code}" toe te kennen'
     SINGULARNAME: 'Machtigingen rol code'
   Permissions:
     PERMISSIONS_CATEGORY: 'Rollen en toegangsrechten'
