--- a/lang/pl.yml
+++ b/lang/pl.yml
@@ -189,7 +189,7 @@ pl:
     Find: Wyszukaj
     LEVELUP: 'W górę'
     LinkExisting: 'Linkuj istniejący'
-    NewRecord: 'Nowy %s'
+    NewRecord: 'Nowy {type}'
     NoItemsFound: 'Nie znaleziono elementów'
     PRINTEDAT: 'Wydrukowane na'
     PRINTEDBY: 'Wydrukowane przez'
@@ -205,7 +205,7 @@ pl:
     Create: Stwórz
     Delete: Usuń
     DeletePermissionsFailure: 'Brak uprawnień do usuwania'
-    Deleted: 'Usunięto %s %s'
+    Deleted: 'Usunięto {type} {name}'
     Save: Zapisz
     Saved: 'Zapisane {name} {link}'
   GridFieldEditButton_ss:
@@ -219,7 +219,7 @@ pl:
     DefaultGroupTitleContentAuthors: 'Autor treści'
     Description: Opis
     GroupReminder: 'Jeśli wybierzesz nadrzędną grupę, obecna grupa otrzyma wszystkie jej role'
-    HierarchyPermsError: 'Nie można przyporządkować uprzywilejowanej grupy "%s" (wymagane uprawnienie ADMIN)'
+    HierarchyPermsError: 'Nie można przyporządkować uprzywilejowanej grupy "{group}" (wymagane uprawnienie ADMIN)'
     Locked: 'Zablokowana?'
     NoRoles: 'Nie znaleziono ról'
     PLURALNAME: Grupy
@@ -232,8 +232,8 @@ pl:
   GroupImportForm:
     Help1: '<p>Zaimportuj użytkowników w <em>formacie CSV</em> (tekst rozdzielany przecinkami). <small><a href="#" class="toggle-advanced">Zaawansowane</a></small></p>'
     ResultCreated: 'Stworzono grup: {count}'
-    ResultDeleted: 'Usunięto grup: %d'
-    ResultUpdated: 'Zaktualizowano grup: %d'
+    ResultDeleted: 'Usunięto grup: {count}'
+    ResultUpdated: 'Zaktualizowano grup: {count}'
   Hierarchy:
     InfiniteLoopNotAllowed: 'Znaleziono nieskończoną pętlę wewnątrz hierarchii "{type}". Proszę zmień rodzica by to rozwiązać.'
   HtmlEditorField:
@@ -372,7 +372,7 @@ pl:
   MemberImportForm:
     Help1: '<p>Zaimportuj użytkowników w <em>formacie CSV</em> (tekst rozdzielany przecinkami). <small><a href="#" class="toggle-advanced">Zaawansowane</a></small></p>'
     ResultCreated: 'Utworzono {count} użytkowników'
-    ResultDeleted: 'Usunięto %d użytkowników'
+    ResultDeleted: 'Usunięto {count} użytkowników'
     ResultNone: 'Bez zmian'
     ResultUpdated: 'Zaktualizowano {count} użytkowników'
   MemberPassword:
@@ -393,9 +393,9 @@ pl:
     UPDATEDRECORDS: 'Zaktualizowano {count} rekordów.'
   ModelAdmin_ImportSpec_ss:
     IMPORTSPECFIELDS: 'Kolumny bazy danych'
-    IMPORTSPECLINK: 'Pokaż specyfikację %s'
+    IMPORTSPECLINK: 'Pokaż specyfikację {model}'
     IMPORTSPECRELATIONS: Relacje
-    IMPORTSPECTITLE: 'Specyfikacja %s'
+    IMPORTSPECTITLE: 'Specyfikacja {model}'
   ModelAdmin_Tools_ss:
     FILTER: Filtr
     IMPORT: Import
@@ -413,9 +413,9 @@ pl:
     Page: Strona
     View: Widok
   PasswordValidator:
-    LOWCHARSTRENGTH: 'Proszę zwiększyć siłę hasła, dodając niektóre z następujących znaków: % s'
+    LOWCHARSTRENGTH: 'Proszę zwiększyć siłę hasła, dodając niektóre z następujących znaków: {chars}'
     PREVPASSWORD: 'Użyłeś już tego hasła wcześniej, proszę wybrać nowe'
-    TOOSHORT: 'Hasło jest za krótkie, proszę podać %s znaków lub więcej'
+    TOOSHORT: 'Hasło jest za krótkie, proszę podać {minimum} znaków lub więcej'
   Permission:
     AdminGroup: Administrator
     CMS_ACCESS_CATEGORY: 'Dostęp do CMSa'
@@ -427,14 +427,14 @@ pl:
     AssignedTo: 'przypisany do "{title}"'
     FromGroup: 'odziedziczone z grupy "{title}"'
     FromRole: 'odziedziczone z roli "{title}"'
-    FromRoleOnGroup: 'odziedziczone z roli "%s" w grupie "%s"'
+    FromRoleOnGroup: 'odziedziczone z roli "{roletitle}" w grupie "{grouptitle}"'
   PermissionRole:
     OnlyAdminCanApply: 'Tylko administrator może to zastosować'
     PLURALNAME: Role
     SINGULARNAME: Rola
     Title: Tytuł
   PermissionRoleCode:
-    PermsError: 'Nie można przyporządkować uprzywilejowanego uprawnienia "%s" (wymagane uprawnienie ADMIN)'
+    PermsError: 'Nie można przyporządkować uprzywilejowanego uprawnienia "{code}" (wymagane uprawnienie ADMIN)'
     SINGULARNAME: 'Kod roli uprawnienia'
   Permissions:
     PERMISSIONS_CATEGORY: 'Role i uprawnienia dostępu'
